# headless-agent-manager

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_SUMMARY.md  BROWSER_EVENT_DEBUG_PLAN.md  BROWSER_EVENT_DEBUG_REPORT.md  CLAUDE.md  CLEANUP_FLOW_COMPARISON.md  CLEANUP_HELPER_UPGRADE_REPORT.md  CLEANUP_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_FINAL_VALIDATION_REPORT.md  CONTEXT_CAPTURE_IMPLEMENTATION_PLAN.md  CONVERSATION_NAME_FEATURE_PROGRESS.md  CRITICAL_DISCOVERY_CLAUDE_CLI.md  DEPLOYMENT_PROCEDURE.md  DEPLOYMENT_PROCEDURE_V2.md  DEV_ENVIRONMENT_SETUP.md  DEV_SUBDOMAIN_SETUP.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_INDEX.md  DUPLICATE_MESSAGE_FIX.md  E2E_FINAL_REPORT.md  E2E_FINAL_STATUS.md  E2E_FIXES_COMPLETE.md  E2E_FIX_PROGRESS.md  E2E_SUCCESS_SUMMARY.md  E2E_TEST_ARCHITECTURE_COMPLETE.md  E2E_TEST_DIAGNOSTIC_REPORT.md  E2E_TEST_FIXES.md  E2E_TEST_FIXES_RESULTS.md  ENVIRONMENT_SEPARATION_FIX.md  FINAL_SESSION_ACHIEVEMENT_REPORT.md  FINAL_TEST_SCORE.md  FINAL_VALIDATION_REPORT.md  FIRST_AGENT_INSTRUCTIONS.md  FRONTEND_TEST_ISOLATION_IMPLEMENTATION.md  GEMINI_SHELL_FIX.md  INSTRUCTIONS_FEATURE_IMPLEMENTATION_COMPLETE.md  INSTRUCTIONS_FEATURE_TDD_PLAN.md  MCP_FEATURE_DESIGN.md  (+39 more)
claude-proxy-service/: .coverage  E2E_TEST_GUIDE.md  E2E_TEST_SUMMARY.md  QUICK_TEST_REFERENCE.md  README.md  TERMINATION_TEST_RESULTS.md  TERMINATION_TEST_SUITE.md  TEST_PAYLOAD_REFERENCE.md  TEST_QUICK_REFERENCE.md  hello-world.ts  hello.test.ts  pyproject.toml  quick_termination_test.sh  requirements.txt  run_e2e_tests.sh  run_test_prompt.sh  (+6 more)
(+337 files in other folders)
